--- a/imageboard/templates/imageboard/profile.html
+++ b/imageboard/templates/imageboard/profile.html
@@ -80,6 +80,9 @@
         <a class="btn btn-primary" href="/moderation/approval_requests">Approve user requests for
             recover private images</a>
     </div>
+    <div>
+        <a class="btn btn-primary" href="/moderation/complaints">Users complaints</a>
+    </div>
 {% endif %}
 {% for pic in pics %}
     <div>
