--- a/imageboard/templates/imageboard/approval_complaints.html
+++ b/imageboard/templates/imageboard/approval_complaints.html
@@ -55,9 +55,14 @@
 </div>
 {% for complaint in complaints %}
     <div>
-        Oblect: <a href="{% url 'image_info' image_token=complaint.0.image.token %}">
-            <h1>{{ complaint.0.image.title }}</h1></a>
-        from user:<a href="/profile/{{ complaint.0.user.id }}">{{ complaint.0.user }}</a>
+        {% if complaint.0.comment == '' %}
+            Oblect: <a href="{% url 'image_info' image_token=complaint.0.image.token %}">
+            {{ complaint.0.image.title }}</a>
+        {% else %}
+            Oblect: <a href="{% url 'image_info' image_token=complaint.0.image.token %}">
+            {{ complaint.0.comment|safe}}</a>
+        {% endif %}
+        <p>from user: <a href="/profile/{{ complaint.0.user.id }}">{{ complaint.0.user }}</a></p>
         <p>{{complaint.0.body}}</p>
 
         <form method="POST"
