--- a/imageboard/templates/imageboard/other_profile.html
+++ b/imageboard/templates/imageboard/other_profile.html
@@ -46,12 +46,21 @@
 <h3>Second Name: {{ user_info.second_name }}</h3>
 <h3>{{ user_info.avatar }}</h3>
 <h3>About me: {{ user_info.info }}</h3>
-{% if moder %}
+
+{% if moder and not user_info.banned %}
     <form method="POST" action="{{ user.id }}/ban_user">
         {% csrf_token %}
         <button class="btn btn-primary" type="submit">Ban!</button>
     </form>
 {% endif %}
+
+{% if moder and user_info.banned %}
+    <form method="POST" action="{{ user.id }}/unban_user">
+        {% csrf_token %}
+        <button class="btn btn-primary" type="submit">Unban!</button>
+    </form>
+{% endif %}
+
 <div>
     <a href="/board">Top Images</a>
 </div>
